# deep-learning-samples

./: .gitignore  README.rst  _z.py  cifar10.py  k_nearest_neighbor.py  k_nearest_neighbor_test.py  linear_classifier.py  linear_svm.py  math_utils.py  neural_net.py  run_knn.py  run_nn.py  run_svm.py
coursera-sequence-models/: README.rst
cs231n/: _z.py  cifar10.py  k_nearest_neighbor.py  k_nearest_neighbor_test.py  linear_svm.py  math_utils.py  neural_net.py  run_knn.py  run_nn.py  softmax.py  timer.py
datasets/: README.rst  get_datasets.sh
gradients/: numgrad.py  sigmoid.py  tanh.py
linear-regression/: README.rst  multiple_linear_regression.py  multiple_linear_regression_test.py  simple_linear_regression.py  simple_linear_regression_test.py
llama2-from-scratch/: .gitignore  README.md  download.sh  inference.py  model.py  pyproject.toml
logistic-regression/: .gitignore  README.rst  binomial_logistic_regression.py  binomial_logistic_regression_test.py  mnist_binary_classifier.py  mnist_dataset.py  mnist_multinomial_classifier.py  mnist_softmax_classifier.py  plot_binary_decision.py  plot_binary_losses.py  plot_sigmoid.py  regression_lib.py  regression_lib_test.py  simple_binary_classifier.py  softmax.py
min-char-rnn/: cnus.txt  markov-model.py  min-char-lstm.py  min-char-rnn.py  preprocess-cnus.py
nanogpt-lecture/: README.md  bigram.py  gpt.py  (+3 more)
transformer-attention/: README.md  moe.py  multiheadattention.py  position_enc_sin.py  pyproject.toml  self-attention.py  selfattention.py  softmax.py  test_moe.py  test_multiheadattention.py  test_selfattention.py
(+67 files in other folders)
